// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transformer -> General Tests TypeScript 3.6.5 1`] = `
{
  "circular/a.ts": {
    "dts": "import { B } from "./b";
export declare class A {
    name: string;
    constructor(name: string);
}
export declare const b: B;
",
    "js": "import { B } from "./b";
export class A {
    constructor(name) {
        this.name = name;
    }
}
export const b = new B();
b.print(new A("This is a random name"));
",
  },
  "circular/b.ts": {
    "dts": "import { A } from "./a";
export declare class B {
    print(a: A): void;
}
",
    "js": "export class B {
    print(a) {
        console.log(a.name);
    }
}
",
  },
  "core/index.ts": {
    "dts": "export { sum } from "../utils/index";
export { g } from "../secondary/hello";
export { sum as sum2 } from "../utils/sum";
export { NoRuntimecodeHere } from "../utils/types-only";
import "../circular/b";
",
    "js": "export { sum } from "../utils/index";
export { g } from "../secondary/hello";
export { sum as sum2 } from "../utils/sum";
import { subs } from "../utils/index";
import "../circular/b";
import { A } from "../circular/a";
import * as path from "https://external.url/path.js";
import * as b from "../circular/a";
import * as c from "../circular/a";
import { myNative } from "../utils/utils.native";
c.A;
b.A;
path.sep;
myNative();
sum.sum(2, 3);
const n = null;
subs(2, 3);
const a = new A("");
(async function () {
    const Logger = await (await import("../dynamic/logger")).Logger;
    const logger = new Logger();
    logger.log("hi");
})();
(async function () {
    const Tester = (await import("../dynamic/tester")).Tester;
    const testerConst = (await import("../dynamic/tester")).tester;
    const testerClass = new Tester();
    testerClass.test(12);
    testerConst.test("12");
})();
",
  },
  "dynamic/logger.ts": {
    "dts": "declare type Tester = import("./tester").Tester;
export declare class Logger {
    level: string;
    tester: Tester;
    log(x: string): void;
}
export {};
",
    "js": "export class Logger {
    constructor() {
        this.level = "hi";
    }
    log(x) {
        console.log(x);
    }
}
",
  },
  "dynamic/tester.ts": {
    "dts": "export declare class Tester {
    test(x: number): void;
}
export declare const tester: {
    test: (x: string) => void;
};
",
    "js": "export class Tester {
    test(x) {
        console.log(x);
    }
}
export const tester = {
    test: (x) => console.log(x),
};
",
  },
  "secondary/hello.ts": {
    "dts": "export declare const g = "hello";
",
    "js": "export const g = "hello";
",
  },
  "utils/index.ts": {
    "dts": "export * from "./sum";
export * from "./subs";
export { NoRuntimecodeHere } from "./types-only";
",
    "js": "export * from "./sum";
export * from "./subs";
",
  },
  "utils/subs.ts": {
    "dts": "export declare function subs(a: number, b: number): number;
",
    "js": "import { sum } from "./sum";
export function subs(a, b) {
    return sum(a, -b);
}
",
  },
  "utils/sum.ts": {
    "dts": "export declare function sum(a: number, b: number): number;
",
    "js": "export function sum(a, b) {
    return a + b;
}
",
  },
  "utils/types-only.ts": {
    "dts": "export declare type NoRuntimecodeHere = "never gonna give you up!";
",
    "js": "throw new Error("Not supposed to be!");
",
  },
  "utils/utils.native.ts": {
    "dts": "export declare function myNative(): void;
",
    "js": "export function myNative() { }
",
  },
}
`;

exports[`Transformer -> General Tests TypeScript 4.7.4 1`] = `
{
  "circular/a.ts": {
    "dts": "import { B } from "./b";
export declare class A {
    name: string;
    constructor(name: string);
}
export declare const b: B;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.b = exports.A = void 0;
const b_1 = require("./b");
class A {
    name;
    constructor(name) {
        this.name = name;
    }
}
exports.A = A;
exports.b = new b_1.B();
exports.b.print(new A("This is a random name"));
",
  },
  "circular/b.ts": {
    "dts": "import { A } from "./a";
export declare class B {
    print(a: A): void;
}
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.B = void 0;
class B {
    print(a) {
        console.log(a.name);
    }
}
exports.B = B;
",
  },
  "core/index.ts": {
    "dts": "export { sum } from "../utils/index";
export { g } from "../secondary/hello";
export { sum as sum2 } from "../utils/sum";
export { NoRuntimecodeHere } from "../utils/types-only";
import "../circular/b";
",
    "js": ""use strict";
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    var desc = Object.getOwnPropertyDescriptor(m, k);
    if (!desc || ("get" in desc ? !m.__esModule : desc.writable || desc.configurable)) {
      desc = { enumerable: true, get: function() { return m[k]; } };
    }
    Object.defineProperty(o, k2, desc);
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {
    Object.defineProperty(o, "default", { enumerable: true, value: v });
}) : function(o, v) {
    o["default"] = v;
});
var __importStar = (this && this.__importStar) || function (mod) {
    if (mod && mod.__esModule) return mod;
    var result = {};
    if (mod != null) for (var k in mod) if (k !== "default" && Object.prototype.hasOwnProperty.call(mod, k)) __createBinding(result, mod, k);
    __setModuleDefault(result, mod);
    return result;
};
Object.defineProperty(exports, "__esModule", { value: true });
exports.sum2 = exports.g = exports.sum = void 0;
// @ts-ignore
const sum = require("../utils/sum");
var index_1 = require("../utils/index");
Object.defineProperty(exports, "sum", { enumerable: true, get: function () { return index_1.sum; } });
var hello_1 = require("../secondary/hello");
Object.defineProperty(exports, "g", { enumerable: true, get: function () { return hello_1.g; } });
var sum_1 = require("../utils/sum");
Object.defineProperty(exports, "sum2", { enumerable: true, get: function () { return sum_1.sum; } });
const index_2 = require("../utils/index");
require("../circular/b");
const a_1 = require("../circular/a");
const path = __importStar(require("https://external.url/path.js"));
const b = __importStar(require("../circular/a"));
const c = __importStar(require("../circular/a"));
const utils_native_1 = require("../utils/utils.native");
c.A;
b.A;
path.sep;
(0, utils_native_1.myNative)();
sum.sum(2, 3);
const n = null;
(0, index_2.subs)(2, 3);
const a = new a_1.A("");
(async function () {
    const Logger = await (await import("../dynamic/logger")).Logger;
    const logger = new Logger();
    logger.log("hi");
})();
(async function () {
    const Tester = (await import("../dynamic/tester")).Tester;
    const testerConst = (await import("../dynamic/tester")).tester;
    const testerClass = new Tester();
    testerClass.test(12);
    testerConst.test("12");
})();
",
  },
  "dynamic/logger.ts": {
    "dts": "declare type Tester = import("./tester").Tester;
export declare class Logger {
    level: string;
    tester: Tester;
    log(x: string): void;
}
export {};
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.Logger = void 0;
class Logger {
    level = "hi";
    tester;
    log(x) {
        console.log(x);
    }
}
exports.Logger = Logger;
",
  },
  "dynamic/tester.ts": {
    "dts": "export declare class Tester {
    test(x: number): void;
}
export declare const tester: {
    test: (x: string) => void;
};
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.tester = exports.Tester = void 0;
class Tester {
    test(x) {
        console.log(x);
    }
}
exports.Tester = Tester;
exports.tester = {
    test: (x) => console.log(x),
};
",
  },
  "secondary/hello.ts": {
    "dts": "export declare const g = "hello";
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.g = void 0;
exports.g = "hello";
",
  },
  "utils/index.ts": {
    "dts": "export * from "./sum";
export * from "./subs";
export { NoRuntimecodeHere } from "./types-only";
",
    "js": ""use strict";
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    var desc = Object.getOwnPropertyDescriptor(m, k);
    if (!desc || ("get" in desc ? !m.__esModule : desc.writable || desc.configurable)) {
      desc = { enumerable: true, get: function() { return m[k]; } };
    }
    Object.defineProperty(o, k2, desc);
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __exportStar = (this && this.__exportStar) || function(m, exports) {
    for (var p in m) if (p !== "default" && !Object.prototype.hasOwnProperty.call(exports, p)) __createBinding(exports, m, p);
};
Object.defineProperty(exports, "__esModule", { value: true });
__exportStar(require("./sum"), exports);
__exportStar(require("./subs"), exports);
",
  },
  "utils/subs.ts": {
    "dts": "export declare function subs(a: number, b: number): number;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.subs = void 0;
const sum_1 = require("./sum");
function subs(a, b) {
    return (0, sum_1.sum)(a, -b);
}
exports.subs = subs;
",
  },
  "utils/sum.ts": {
    "dts": "export declare function sum(a: number, b: number): number;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.sum = void 0;
function sum(a, b) {
    return a + b;
}
exports.sum = sum;
",
  },
  "utils/types-only.ts": {
    "dts": "export declare type NoRuntimecodeHere = "never gonna give you up!";
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
throw new Error("Not supposed to be!");
",
  },
  "utils/utils.native.ts": {
    "dts": "export declare function myNative(): void;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.myNative = void 0;
function myNative() { }
exports.myNative = myNative;
",
  },
}
`;

exports[`Transformer -> General Tests TypeScript Latest 1`] = `
{
  "circular/a.ts": {
    "dts": "import { B } from "./b";
export declare class A {
    name: string;
    constructor(name: string);
}
export declare const b: B;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.b = exports.A = void 0;
const b_1 = require("./b");
class A {
    name;
    constructor(name) {
        this.name = name;
    }
}
exports.A = A;
exports.b = new b_1.B();
exports.b.print(new A("This is a random name"));
",
  },
  "circular/b.ts": {
    "dts": "import { A } from "./a";
export declare class B {
    print(a: A): void;
}
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.B = void 0;
class B {
    print(a) {
        console.log(a.name);
    }
}
exports.B = B;
",
  },
  "core/index.ts": {
    "dts": "export { sum } from "../utils/index";
export { g } from "../secondary/hello";
export { sum as sum2 } from "../utils/sum";
export { NoRuntimecodeHere } from "../utils/types-only";
import "../circular/b";
",
    "js": ""use strict";
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    var desc = Object.getOwnPropertyDescriptor(m, k);
    if (!desc || ("get" in desc ? !m.__esModule : desc.writable || desc.configurable)) {
      desc = { enumerable: true, get: function() { return m[k]; } };
    }
    Object.defineProperty(o, k2, desc);
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {
    Object.defineProperty(o, "default", { enumerable: true, value: v });
}) : function(o, v) {
    o["default"] = v;
});
var __importStar = (this && this.__importStar) || function (mod) {
    if (mod && mod.__esModule) return mod;
    var result = {};
    if (mod != null) for (var k in mod) if (k !== "default" && Object.prototype.hasOwnProperty.call(mod, k)) __createBinding(result, mod, k);
    __setModuleDefault(result, mod);
    return result;
};
Object.defineProperty(exports, "__esModule", { value: true });
exports.sum2 = exports.g = exports.sum = void 0;
// @ts-ignore
const sum = require("../utils/sum");
var index_1 = require("../utils/index");
Object.defineProperty(exports, "sum", { enumerable: true, get: function () { return index_1.sum; } });
var hello_1 = require("../secondary/hello");
Object.defineProperty(exports, "g", { enumerable: true, get: function () { return hello_1.g; } });
var sum_1 = require("../utils/sum");
Object.defineProperty(exports, "sum2", { enumerable: true, get: function () { return sum_1.sum; } });
const index_2 = require("../utils/index");
require("../circular/b");
const a_1 = require("../circular/a");
const path = __importStar(require("https://external.url/path.js"));
const b = __importStar(require("../circular/a"));
const c = __importStar(require("../circular/a"));
const utils_native_1 = require("../utils/utils.native");
c.A;
b.A;
path.sep;
(0, utils_native_1.myNative)();
sum.sum(2, 3);
const n = null;
(0, index_2.subs)(2, 3);
const a = new a_1.A("");
(async function () {
    const Logger = await (await import("../dynamic/logger")).Logger;
    const logger = new Logger();
    logger.log("hi");
})();
(async function () {
    const Tester = (await import("../dynamic/tester")).Tester;
    const testerConst = (await import("../dynamic/tester")).tester;
    const testerClass = new Tester();
    testerClass.test(12);
    testerConst.test("12");
})();
",
  },
  "dynamic/logger.ts": {
    "dts": "type Tester = import("./tester").Tester;
export declare class Logger {
    level: string;
    tester: Tester;
    log(x: string): void;
}
export {};
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.Logger = void 0;
class Logger {
    level = "hi";
    tester;
    log(x) {
        console.log(x);
    }
}
exports.Logger = Logger;
",
  },
  "dynamic/tester.ts": {
    "dts": "export declare class Tester {
    test(x: number): void;
}
export declare const tester: {
    test: (x: string) => void;
};
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.tester = exports.Tester = void 0;
class Tester {
    test(x) {
        console.log(x);
    }
}
exports.Tester = Tester;
exports.tester = {
    test: (x) => console.log(x),
};
",
  },
  "secondary/hello.ts": {
    "dts": "export declare const g = "hello";
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.g = void 0;
exports.g = "hello";
",
  },
  "utils/index.ts": {
    "dts": "export * from "./sum";
export * from "./subs";
export { NoRuntimecodeHere } from "./types-only";
",
    "js": ""use strict";
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    var desc = Object.getOwnPropertyDescriptor(m, k);
    if (!desc || ("get" in desc ? !m.__esModule : desc.writable || desc.configurable)) {
      desc = { enumerable: true, get: function() { return m[k]; } };
    }
    Object.defineProperty(o, k2, desc);
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __exportStar = (this && this.__exportStar) || function(m, exports) {
    for (var p in m) if (p !== "default" && !Object.prototype.hasOwnProperty.call(exports, p)) __createBinding(exports, m, p);
};
Object.defineProperty(exports, "__esModule", { value: true });
__exportStar(require("./sum"), exports);
__exportStar(require("./subs"), exports);
",
  },
  "utils/subs.ts": {
    "dts": "export declare function subs(a: number, b: number): number;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.subs = subs;
const sum_1 = require("./sum");
function subs(a, b) {
    return (0, sum_1.sum)(a, -b);
}
",
  },
  "utils/sum.ts": {
    "dts": "export declare function sum(a: number, b: number): number;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.sum = sum;
function sum(a, b) {
    return a + b;
}
",
  },
  "utils/types-only.ts": {
    "dts": "export type NoRuntimecodeHere = "never gonna give you up!";
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
throw new Error("Not supposed to be!");
",
  },
  "utils/utils.native.ts": {
    "dts": "export declare function myNative(): void;
",
    "js": ""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.myNative = myNative;
function myNative() { }
",
  },
}
`;
